--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.9.13"
 pyqt6 = "6.4.2"
 pyqt6-tools = "^6.4.2.3.3"
 pandas = "^2.1.0"
+pyqtgraph = "^0.13.3"
 
 [tool.poetry.dev-dependencies]
 pytype = { version = ">=2020.06.01", markers = "python_version < '3.9' and platform_system != 'Windows'"}
